--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 	<title>Live Character Counter | Mini Project</title>
 	<meta name="keywords" content="free projects1, special learning, get free source code, bholu singh">
-	<meta name="description" content="">
+	<meta name="description" content="In this project, we can count all the characters(maybe characters, symbols, numbers, punctuation) that are written given box.">
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
